# cc_starter

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  install-hook.sh  install.sh
.claude/: lesson_learnt
.github/workflows/: ci.yml  release.yml
docs/: dashboard.md
docs/drafts/: _template.md
docs/drafts/intake-20260302120000/: plan.md  requirements.md  review.md  session-log.md  spec.md
docs/drafts/intake-20260302140000/: plan.md  requirements.md  session-log.md
docs/drafts/intake-20260303000100/: plan.md  procs.txt  requirements.md  review.md  session-log.md  spec.md
docs/drafts/intake-20260310120000/: procs.txt  requirements.md  review.md  session-log.md  spec.md
docs/drafts/intake-20260312120000/: plan.md  procs.txt  requirements.md  review.md  session-log.md  spec.md
docs/drafts/intake-20260313120000/: procs.txt  requirements.md  review.md  session-log.md  spec.md
docs/issues/: _template.md
docs/lessons/: _template.md  bats-shell-function-stubbing.md  form-field-index-single-source-of-truth.md
docs/modules/: _template.md  app.md  cli.md  config.md  index.md  launch.md  ui.md
docs/procs/: _template.md
docs/quality/: _template.md  codebase-review.md
docs/references/: _template.md  index.md  install-script.md
docs/rules/: _template.md  kiss.md
docs/sops/: _template.md
examples/: exec_profile.rs
scripts/: validate_config.sh
src/: app.rs  cli.rs  config.rs  launch.rs  lib.rs  main.rs  ui.rs
tests/: install.bats  integration.rs  live.rs
tests/helpers/: claude
(+143 files in other folders)
